# polymarket-money

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.codex/: config.toml  context-policy.toml  hooks.json
contracts/: app-status-v1.schema.json  normalized-dataset-manifest-v1.schema.json  normalized-dataset-manifest-v2.schema.json  normalized-record-v1.schema.json  raw-event-v1.schema.json  raw-event-v2.schema.json
docs/: INDEX.md  architecture.md  domain-model.md  engine-review.md  index.md  migration-plan.md  migration.md  module-inventory.md  reports.md  reuse-register.md  target-architecture.md
experiments/: batch-04b-r2-24-market-observation.sha256  batch-04b-r2-24-market-observation.yaml
frontend/: index.html  playwright.config.ts  polymarket_btc5m_workbench_fusion_v3.html  tsconfig.app.json  vite.config.ts
reports/: INDEX.md  REPORTS-INDEX.md
research/: __init__.py
scripts/: batch-04b-r2-session.sh  benchmark-l-decision.mjs  create-kj-paper-campaign.ts  create-kj-signal-compare-campaign.ts  finalize-kj-paper-run.ts  inspect-kj-paper-journal.ts  kj-paper-mvp.ts  kj-signal-compare-mvp.ts  live-runtime.ts  local-environments.mjs  local-ports.mjs  mvp-console.ts  paper-market-host.ts  render-tauri-icon.mjs  report-kj-paper-campaign-cohort.ts  report-kj-paper-cohort-observability.ts  report-kj-paper-cohort.ts  report-kj-paper-run.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_status.rs  commands.rs  lib.rs  main.rs  paper_host.rs
(+446 files in other folders)
