[package]
name = "polymarket-money-tauri-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Lightweight Tauri and system-status bridge for polymarket-money"
license = "UNLICENSED"
publish = false

[lib]
name = "polymarket_money_tauri_bridge"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
serde = "1.0.229"
serde_json = "1.0.151"
tauri = "2.11.5"

[build-dependencies]
tauri-build = "2.6.3"
